Add support for JEP 472 in Gradle by setting GRADLE_OPTS for native access